Part2-RAG/nb-deployment/nb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpu-notebook
  labels:
    app: cpu-notebook
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 8888
  selector:
    app: cpu-notebook
