Part2-RAG/nb-deployment/nb-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cpu-notebook
  name: cpu-notebook
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cpu-notebook
